deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: onetime
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: onetime
    spec:
      containers:
      - name: onetimeapp
        image: docker.io/thilina/onetime:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: vault
        image: docker.io/vault:0.8.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: onetime
  labels:
    app: onetime
spec:
  ports:
  - port: 8080
    name: onetime
    targetPort: 8080
  selector:
    app: onetime
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    httpsBackend: "false"
    httpsOnly: "false"
    ssl: "false"
#    httpsOnly: "true"
#    ssl: "true"
  name: onetime
spec:
  rules:
  - host: onetime.thilina.org 
    http:
      paths:
      - backend:
          serviceName: onetime
          servicePort: 8080
        path: /
